# python-acumbamail

./: .gitignore  Acumbamail.postman_collection.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  acumbamail-openapi.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-to-pypi.yaml
acumbamail/: __init__.py  aclient.py  automation_client.py  automation_models.py  automation_yaml.py  client.py  models.py  utils.py
acumbamail/cli/: main.py  utils.py
acumbamail/cli/commands/: automations.py  campaigns.py  install_skills.py  lists.py  subscribers.py  webhooks.py
acumbamail/data/skills/acumbamail-automations/: SKILL.md
acumbamail/data/skills/acumbamail-cli/: SKILL.md
docs/superpowers/plans/: 2026-05-18-automations.md  2026-05-18-cli.md
docs/superpowers/specs/: 2026-05-18-automations-design.md  2026-05-18-cli-design.md
examples/: README.md  __init__.py  ab_testing.py  async_example.py  automated_workflows.py  bulk_operations.py  campaign_analytics.py  error_handling.py  example-001.py  sync_example.py
tests/: conftest.py  test_aclient_new_methods.py  test_aclient_original.py  test_automation_cli.py  test_automation_client.py  test_automation_models.py  test_automation_yaml.py  test_cli.py  test_client_new_methods.py  test_client_original.py  test_contracts.py  test_models.py  test_openapi_coverage.py  test_openapi_structure.py
