[project]
name = "acumbamail"
version = "0.1.5"
description = "Acumamail SDK client for Python"
authors = [
    {name = "Daniel Garcia (cr0hn)"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1,<0.29.0",
    "typer>=0.15.0",
]

[project.scripts]
acumbamail = "acumbamail.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
