[project]
name = "acumbamail"
version = "0.3.0"
description = "Acumamail SDK client for Python"
authors = [
    {name = "Daniel Garcia (cr0hn)"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1,<0.29.0",
    "playwright>=1.40.0",
    "pyyaml>=6.0.1",
    "typer>=0.15.0",
    "undetected-chromedriver>=3.5.5",
]

[project.scripts]
acumbamail = "acumbamail.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "openapi-spec-validator>=0.8.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not contract'"
markers = [
    "contract: tests de contrato contra la API real (requieren red)",
]
